tests/asm-link/section-name-invalid/rgbasm.err
error: `Value` does not belong to a section
   ╭─[ test.asm:7:17 ]
   │
 7 │ println SECTION(Value) ; not OK
   │                 ──┬──  
   │                   ╰──── constant symbols do not belong to any section
───╯
1 error generated.
